# azure-event-hubs-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dependencies.cmake  thirdpartynotice.txt
build_all/linux/: setup.sh
build_all/windows/: build.cmd
configs/: azure_event_hubs_cConfig.cmake
docs/: beagleboneblack_debian_setup.md  desktop_fedora_setup.md  desktop_ubuntu_setup.md  raspberrypi_raspbian_setup.md  windows_setup.md
eventhub_client/: CMakeLists.txt
eventhub_client/devdoc/requirement_docs/: eventdata_requirements.md  eventhubauth.md  eventhubclient_ll_requirements.md  eventhubclient_requirements.md  eventhubreceiver_requirements.md  eventhubreceiver_requirements_ll.md  kvp_parser_requirements.md  version_requirements.md
eventhub_client/inc/: eventdata.h  eventhubauth.h  eventhubclient.h  eventhubclient_ll.h  eventhubreceiver.h  eventhubreceiver_ll.h  kvp_parser.h  version.h
eventhub_client/samples/receive/: readme.md  receive.c
eventhub_client/samples/send/: send.c
eventhub_client/samples/send_batch/: send_batch.c
eventhub_client/samples/send_batch/windows/: readme.md
eventhub_client/samples/sendasync/: sendasync.c
eventhub_client/samples/sendasync/linux/: readme.md
eventhub_client/src/: eventdata.c  eventhubauth.c  eventhubclient.c  eventhubclient_ll.c  eventhubreceiver.c  eventhubreceiver_ll.c  kvp_parser.c  version.c
eventhub_client/tests/: CMakeLists.txt
eventhub_client/tests/eventdata_unittests/: CMakeLists.txt
eventhub_client/tests/eventdata_ut/: CMakeLists.txt  eventdata_ut.c  eventdata_ut.cpp
eventhub_client/tests/eventhubauth_unittests/: CMakeLists.txt  eventhubauth_unittests.c
eventhub_client/tests/eventhubauth_ut/: CMakeLists.txt  eventhubauth_ut.c  main.c
eventhub_client/tests/eventhubclient_e2e/: CMakeLists.txt
eventhub_client/tests/eventhubclient_e2etests/: eventhubclient_e2e.c  eventhubclient_e2etests.cpp
eventhub_client/tests/eventhubclient_ll_unittests/: CMakeLists.txt  eventhubclient_ll_unittests.cpp  eventhubclient_ll_ut.c  main.c
eventhub_client/tests/eventhubclient_ll_ut/: CMakeLists.txt  eventhubclient_ll_ut.c
eventhub_client/tests/eventhubclient_unittests/: CMakeLists.txt  eventhubclient_unittests.cpp
eventhub_client/tests/eventhubclient_ut/: CMakeLists.txt  eventhubclient_ut.c  eventhubclient_ut.cpp  main.c
eventhub_client/tests/eventhubreceiver_ll_unittests/: CMakeLists.txt  eventhubreceiver_ll_unittests.c
eventhub_client/tests/eventhubreceiver_ll_ut/: CMakeLists.txt  eventhubreceiver_ll_ut.c
eventhub_client/tests/eventhubreceiver_unittests/: CMakeLists.txt  eventhubreceiver_unittests.c
eventhub_client/tests/eventhubreceiver_ut/: CMakeLists.txt  eventhubreceiver_ut.c
eventhub_client/tests/kvp_parser_unittests/: CMakeLists.txt  kvp_parser_unittests.c  main.c
eventhub_client/tests/kvp_parser_ut/: CMakeLists.txt  kvp_parser_ut.c
eventhub_client/tests/reals/: real_doublylinkedlist.c  real_doublylinkedlist.h
eventhub_client/tests/version_ut/: CMakeLists.txt  main.c  version_ut.c
jenkins/: linux_c.sh  windows_c.cmd
